Ensure text wraps in description box

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -76,6 +76,11 @@ button {
   font-size: 70%;
 }
 
+input {
+  word-wrap: break-word;
+  word-break: break-all;
+}
+
 @media screen and (min-width: 768px) {
 }
 
